[gd_scene load_steps=6 format=3 uid="uid://3smrq1yoe4xv"]

[ext_resource type="Script" path="res://title/title_ui.gd" id="1_vxxii"]
[ext_resource type="Texture2D" uid="uid://cs2ld1oqeq2lf" path="res://sprites/ssakdduk.png" id="2_yp7cv"]
[ext_resource type="Texture2D" uid="uid://cwmays0c52gic" path="res://sprites/ui_start_button.png" id="3_k1los"]
[ext_resource type="FontFile" uid="uid://brgsmnvep511k" path="res://font/NoonnuBasicGothicRegular.ttf" id="4_hnpev"]

[sub_resource type="LabelSettings" id="LabelSettings_3k5jd"]
font = ExtResource("4_hnpev")
font_size = 76
font_color = Color(0, 0, 0, 1)

[node name="TitleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxxii")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 50.0
texture = ExtResource("2_yp7cv")
expand_mode = 3
stretch_mode = 5

[node name="StartButtonContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButton" type="TextureButton" parent="StartButtonContainer"]
layout_direction = 1
layout_mode = 2
texture_normal = ExtResource("3_k1los")

[node name="Label" type="Label" parent="StartButtonContainer/StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"
label_settings = SubResource("LabelSettings_3k5jd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditButton" type="TextureButton" parent="."]
layout_direction = 1
layout_mode = 2
anchor_left = 0.173
anchor_top = 0.646
anchor_right = 0.824
anchor_bottom = 0.796
offset_left = 0.010994
offset_top = 124.608
offset_right = 0.167969
offset_bottom = 124.808
texture_normal = ExtResource("3_k1los")

[node name="Label" type="Label" parent="CreditButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Credit"
label_settings = SubResource("LabelSettings_3k5jd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credit" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.878431)

[node name="Label" type="Label" parent="Credit"]
layout_mode = 0
offset_left = 25.0
offset_top = 126.0
offset_right = 397.0
offset_bottom = 199.0
text = "background music: https://opengameart.org/content/nes-shooter-music-5-tracks-3-jingles

sfx: https://freesound.org/people/rtyrtyrtyrtyrtyrtyrtyrty/sounds/766480/"
autowrap_mode = 2

[node name="CreditCloseButton" type="TextureButton" parent="Credit"]
layout_direction = 1
layout_mode = 2
anchor_left = 0.173
anchor_top = 0.646
anchor_right = 0.824
anchor_bottom = 0.796
offset_left = 0.010994
offset_top = -0.392029
offset_right = 0.167969
offset_bottom = -0.192078
texture_normal = ExtResource("3_k1los")

[node name="Label" type="Label" parent="Credit/CreditCloseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Close"
label_settings = SubResource("LabelSettings_3k5jd")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="StartButtonContainer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="CreditButton" to="." method="_on_credit_button_button_up"]
[connection signal="button_up" from="Credit/CreditCloseButton" to="." method="_on_credit_close_button_button_up"]
